dnl	$Id$
dnl
dnl Process this file with autoconf to produce a configure script.

AC_INIT(nq/sv_main.c)
AM_INIT_AUTOMAKE(twilight,0.0.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL

dnl Custom macros (move these to a seperate file?)
AC_DEFUN(TL_CHECK_LIB,[
	LDFLAGS_SAVE=$LDFLAGS
	LDFLAGS="$3 -l$1 $LDFLAGS"
	AC_TRY_LINK_FUNC($2, [$4], [$5])
	LDFLAGS=$LDFLAGS_SAVE
])
AC_DEFUN(TL_CHECK_HEADER,[
	CPPFLAGS_SAVE=$CPPFLAGS
	CPPFLAGS="$2 $CPPFLAGS"
	AC_TRY_CPP([
#include <$1>
], [$3], [$4])
	CPPFLAGS=$CPPFLAGS_SAVE
])


dnl Check for SDL, fatal if not found
AM_PATH_SDL(1.2.0,
	,
	AC_MSG_ERROR([SDL 1.2 or above is required to build $PACKAGE])
)


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE

dnl userpath/sharepath config
AC_ARG_WITH(share-path,
	[  --with-share-path       set default shared data path [DATADIR/games/twilight]],,
	with_share_path=\${datadir}/games/twilight)
SHAREPATH="$with_share_path"
AC_SUBST(SHAREPATH)

dnl XXX FIXME: make this a little more sane..
AC_ARG_WITH(user-path,
	[  --with-user-path        set default user data path [\$HOME/.twilight]],,
	with_user_path="$HOME/.twilight")
USERPATH="$with_user_path"
AC_SUBST(USERPATH)

CFLAGS="-Wall -Werror $CFLAGS"

AC_OUTPUT(
	Makefile
	nq/Makefile
	qw/Makefile
	qw-server/Makefile
)

echo "*** Configuration details follow"
echo "    VERSION   = $VERSION"
echo "    CFLAGS    = $CFLAGS"
echo "    SHAREPATH = $SHAREPATH"
echo "    USERPATH  = $USERPATH"
echo "*** You're ready to run make"

