# $Id$
#
# This file is intended to be processed by automake

AUTOMAKE_OPTIONS=gnu dist-zip

noinst_HEADERS= \
	anorm_dots.h anorms.h bspfile.h common.h crc.h cvar.h \
	draw.h gl_warp_sin.h host.h input.h mathlib.h mdfour.h \
	model.h modelgen.h pmove.h pr_comp.h qtypes.h quakedef.h sbar.h \
	spritegn.h strlib.h sys.h twiconfig.h vid.h view.h wad.h \
	zone.h
